--- a/views/apple.ejs
+++ b/views/apple.ejs
@@ -23,7 +23,9 @@
         </form>
         <h2>Post</h2>
         <form action="http://localhost:3000/apple" method="post">
-            <input type="text" name="banana">
+            <input type="text" name="fruitname" placeholder=" fruit name">
+            <input type="text" name="qty" placeholder="Qty ">
+            <input type="text" name="price" placeholder="price">
             <button>submit</button>
         </form>
         <!--[if lt IE 7]>
